# Vulkan-Voxel

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Camera.h  Cargo.toml  PerlinNoise.hpp  README.md  imgui.ini  main.cpp  main.h  readme.md  stb_image.h  vk_engine.cpp  vk_engine.h  vk_initialisers.cpp  vk_initialisers.h  vk_mesh.cpp  vk_mesh.h  vk_textures.cpp  vk_textures.h  vk_types.h
Debug/: vkvia.html
DebugUtils/: ImGuiHandler.cpp  ImGuiHandler.h
Entity/: Entity.cpp  Entity.h
RenderUtils/: RenderBlock.cpp  RenderBlock.h
assets/: debug.glb
block/: Block.cpp  Block.h
player/: Player.cpp  Player.h
shaders/: shader.frag  shader.vert  temp.frag  temp.vert
src/: camera.rs  game.rs  main.rs
src/assets/: load_textures.rs  mod.rs  texture_extractor.rs
src/debug/: camera_debug.rs  debug_ui.rs  fps_counter.rs  mod.rs  model.rs
src/engine/: mod.rs  render.rs  vk_engine.rs
src/mesh/: chunk.rs
src/world/: chunk.rs  mod.rs  region.rs
textures/: Atlas.kra
threadpool/: ChunkPool.cpp  ChunkPool.hpp  MapSafe.cpp  MapSafe.hpp  QueueSafe.cpp  QueueSafe.hpp  ThreadPool.cpp  ThreadPool.hpp
vulkan/: VkBootstrap.cpp  VkBootstrap.h  VkBootstrapDispatch.h  vk_engine.cpp  vk_engine.h  vk_initialisers.h  vk_mesh.cpp  vk_mesh.h  vk_textures.cpp  vk_types.h
world/: Chunk.cpp  Chunk.h  Region.cpp  Region.h  World.cpp  World.h  chunk.cpp  chunk.h
