[package]
name = "vulkan_rust_rewrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.34.1"
imgui = "0.11.0"
glm = "0.2.3"
stb_image = "0.3.0"
winit = "0.29.10"0

[profile.dev]
opt-level = 1
